--- a/PodcastFeed/PodcastFeed/Base.lproj/Main.storyboard
+++ b/PodcastFeed/PodcastFeed/Base.lproj/Main.storyboard
@@ -1,24 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--HomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="HomeVC" customModule="PodcastFeed" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6Ru-Ca-VwJ">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="230"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="230" id="AZc-Gb-DMh"/>
+                                </constraints>
+                            </imageView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WMY-qs-WuW">
+                                <rect key="frame" x="0.0" y="230" width="414" height="632"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="EpisodeCell" rowHeight="130" id="O6t-Oq-Ew5" customClass="EpisodeCell" customModule="PodcastFeed" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="130"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="O6t-Oq-Ew5" id="Bwb-IV-19Q">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="130"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="4dj-r6-wk5">
+                                                    <rect key="frame" x="16" y="16" width="99" height="98"/>
+                                                    <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="4dj-r6-wk5" secondAttribute="height" constant="1" id="rKK-Md-X8J"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iot-Gl-DFA">
+                                                    <rect key="frame" x="131" y="21" width="267" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VCP-4g-Urg">
+                                                    <rect key="frame" x="131" y="88" width="267" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="4dj-r6-wk5" firstAttribute="top" secondItem="Bwb-IV-19Q" secondAttribute="top" constant="16" id="KrZ-La-PRv"/>
+                                                <constraint firstAttribute="bottom" secondItem="4dj-r6-wk5" secondAttribute="bottom" constant="16" id="a7n-0I-xvm"/>
+                                                <constraint firstItem="iot-Gl-DFA" firstAttribute="top" secondItem="4dj-r6-wk5" secondAttribute="top" constant="5" id="cog-bC-o7w"/>
+                                                <constraint firstItem="iot-Gl-DFA" firstAttribute="leading" secondItem="4dj-r6-wk5" secondAttribute="trailing" constant="16" id="dLj-p0-JuD"/>
+                                                <constraint firstItem="VCP-4g-Urg" firstAttribute="leading" secondItem="4dj-r6-wk5" secondAttribute="trailing" constant="16" id="iQC-Bs-zEn"/>
+                                                <constraint firstItem="4dj-r6-wk5" firstAttribute="leading" secondItem="Bwb-IV-19Q" secondAttribute="leading" constant="16" id="mcg-hd-g9N"/>
+                                                <constraint firstAttribute="trailing" secondItem="VCP-4g-Urg" secondAttribute="trailing" constant="16" id="nA2-RW-4uq"/>
+                                                <constraint firstItem="VCP-4g-Urg" firstAttribute="bottom" secondItem="4dj-r6-wk5" secondAttribute="bottom" constant="-5" id="pS3-QV-RVw"/>
+                                                <constraint firstAttribute="trailing" secondItem="iot-Gl-DFA" secondAttribute="trailing" constant="16" id="qCs-Rs-H1c"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="dateLabel" destination="VCP-4g-Urg" id="Ip8-DJ-Obu"/>
+                                            <outlet property="episodeImage" destination="4dj-r6-wk5" id="vwA-wb-Fk2"/>
+                                            <outlet property="titleLabel" destination="iot-Gl-DFA" id="o2Q-hQ-0AU"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Ru-Ca-VwJ" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="JKF-Cb-8Wz"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="WMY-qs-WuW" secondAttribute="bottom" id="L1Z-rS-lSL"/>
+                            <constraint firstItem="6Ru-Ca-VwJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="NCp-85-JP1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="WMY-qs-WuW" secondAttribute="trailing" id="SwG-gB-p4e"/>
+                            <constraint firstItem="WMY-qs-WuW" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="b3w-3n-dmZ"/>
+                            <constraint firstItem="WMY-qs-WuW" firstAttribute="top" secondItem="6Ru-Ca-VwJ" secondAttribute="bottom" id="n6a-9a-CtK"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="6Ru-Ca-VwJ" secondAttribute="trailing" id="oDI-E8-lxe"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="WMY-qs-WuW" id="PYe-4Q-UdX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-183" y="77"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
