--- a/PodcastFeed/PodcastFeed/Base.lproj/Main.storyboard
+++ b/PodcastFeed/PodcastFeed/Base.lproj/Main.storyboard
@@ -105,7 +105,7 @@
                                     <constraint firstAttribute="width" secondItem="2O3-Mg-iPr" secondAttribute="height" id="rVM-hj-EhJ"/>
                                 </constraints>
                             </imageView>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="cac-KZ-iJk">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cac-KZ-iJk">
                                 <rect key="frame" x="16" y="494" width="382" height="220"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
@@ -134,6 +134,9 @@
                                     <constraint firstAttribute="width" secondItem="QXJ-Lr-q4X" secondAttribute="height" id="tmI-pe-uLd"/>
                                 </constraints>
                                 <state key="normal" image="play.circle" catalog="system"/>
+                                <connections>
+                                    <action selector="playButtonDidTap:" destination="UxL-IY-tuv" eventType="touchUpInside" id="f4h-PP-tHZ"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="m06-kr-ObZ"/>
@@ -161,11 +164,94 @@
                         <outlet property="descriptionTextView" destination="cac-KZ-iJk" id="mua-u1-SkT"/>
                         <outlet property="episodeImage" destination="2O3-Mg-iPr" id="h7B-5b-WdV"/>
                         <outlet property="titleLabel" destination="yiE-xy-HYk" id="kW1-9d-rCZ"/>
+                        <segue destination="3Bz-6p-Mdn" kind="show" identifier="SeguePlayerVC" id="b13-GP-HFe"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0hC-P0-cdd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1639.1304347826087" y="75.669642857142847"/>
+        </scene>
+        <!--Player-->
+        <scene sceneID="hFD-pn-XeW">
+            <objects>
+                <viewController id="3Bz-6p-Mdn" customClass="PlayerVC" customModule="PodcastFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="rUC-a0-MDN">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bRs-Q6-NkV">
+                                <rect key="frame" x="16" y="104" width="382" height="382"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="bRs-Q6-NkV" secondAttribute="height" multiplier="1:1" id="E4Y-zy-oe0"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JJz-Zm-kIT">
+                                <rect key="frame" x="16" y="536" width="382" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Rtc-tD-Bga"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Uya-GW-pvP">
+                                <rect key="frame" x="14" y="686" width="386" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="PdN-6e-yOJ"/>
+                                </constraints>
+                            </slider>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AsJ-PB-0sc">
+                                <rect key="frame" x="149.5" y="731" width="115" height="115"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="AsJ-PB-0sc" secondAttribute="height" id="iF5-uG-kjN"/>
+                                </constraints>
+                                <state key="normal" image="pause.circle" catalog="system"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ir-PO-h9U">
+                                <rect key="frame" x="81.5" y="773.5" width="60" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Jvr-AH-cmB"/>
+                                    <constraint firstAttribute="width" constant="60" id="ye2-vg-80g"/>
+                                </constraints>
+                                <state key="normal" image="backward" catalog="system"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avd-wS-aBg">
+                                <rect key="frame" x="272.5" y="773.5" width="60" height="30"/>
+                                <state key="normal" image="forward" catalog="system"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="hRw-yO-GOD"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="bRs-Q6-NkV" firstAttribute="top" secondItem="hRw-yO-GOD" secondAttribute="top" constant="16" id="11t-TJ-ShI"/>
+                            <constraint firstItem="AsJ-PB-0sc" firstAttribute="centerX" secondItem="rUC-a0-MDN" secondAttribute="centerX" id="1Vh-7g-abu"/>
+                            <constraint firstItem="Uya-GW-pvP" firstAttribute="top" secondItem="JJz-Zm-kIT" secondAttribute="bottom" constant="100" id="3fz-JO-ebg"/>
+                            <constraint firstItem="JJz-Zm-kIT" firstAttribute="top" secondItem="bRs-Q6-NkV" secondAttribute="bottom" constant="50" id="4ts-dz-Faa"/>
+                            <constraint firstItem="JJz-Zm-kIT" firstAttribute="leading" secondItem="hRw-yO-GOD" secondAttribute="leading" constant="16" id="Bqa-9b-und"/>
+                            <constraint firstItem="bRs-Q6-NkV" firstAttribute="leading" secondItem="hRw-yO-GOD" secondAttribute="leading" constant="16" id="Dw3-TP-olN"/>
+                            <constraint firstItem="Uya-GW-pvP" firstAttribute="leading" secondItem="hRw-yO-GOD" secondAttribute="leading" constant="16" id="POa-2v-jaH"/>
+                            <constraint firstItem="8ir-PO-h9U" firstAttribute="centerY" secondItem="AsJ-PB-0sc" secondAttribute="centerY" id="QeV-3k-3OX"/>
+                            <constraint firstItem="hRw-yO-GOD" firstAttribute="trailing" secondItem="Uya-GW-pvP" secondAttribute="trailing" constant="16" id="Uqj-nu-fVw"/>
+                            <constraint firstItem="avd-wS-aBg" firstAttribute="leading" secondItem="AsJ-PB-0sc" secondAttribute="trailing" constant="8" id="VN4-9W-bu9"/>
+                            <constraint firstItem="AsJ-PB-0sc" firstAttribute="leading" secondItem="8ir-PO-h9U" secondAttribute="trailing" constant="8" id="WcV-j9-tRH"/>
+                            <constraint firstItem="hRw-yO-GOD" firstAttribute="bottom" secondItem="AsJ-PB-0sc" secondAttribute="bottom" constant="16" id="Y5S-o1-MoT"/>
+                            <constraint firstItem="avd-wS-aBg" firstAttribute="height" secondItem="8ir-PO-h9U" secondAttribute="height" id="YSr-EH-GKV"/>
+                            <constraint firstItem="avd-wS-aBg" firstAttribute="width" secondItem="8ir-PO-h9U" secondAttribute="width" id="ecx-H7-yCX"/>
+                            <constraint firstItem="hRw-yO-GOD" firstAttribute="trailing" secondItem="bRs-Q6-NkV" secondAttribute="trailing" constant="16" id="gwn-aX-BkP"/>
+                            <constraint firstItem="hRw-yO-GOD" firstAttribute="trailing" secondItem="JJz-Zm-kIT" secondAttribute="trailing" constant="16" id="hCY-UE-N7Z"/>
+                            <constraint firstItem="avd-wS-aBg" firstAttribute="centerY" secondItem="AsJ-PB-0sc" secondAttribute="centerY" id="lNh-Xr-tkA"/>
+                            <constraint firstItem="AsJ-PB-0sc" firstAttribute="top" secondItem="Uya-GW-pvP" secondAttribute="bottom" constant="25" id="o9E-RS-Yng"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Player" id="6f0-yf-CMQ"/>
+                    <connections>
+                        <outlet property="episodeImage" destination="bRs-Q6-NkV" id="EQP-Ja-0E8"/>
+                        <outlet property="titleLabel" destination="JJz-Zm-kIT" id="3mU-Vp-FFm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RIi-wx-OvX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2500" y="76"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="FwT-5k-R6u">
@@ -187,6 +273,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="backward" catalog="system" width="128" height="79"/>
+        <image name="forward" catalog="system" width="128" height="79"/>
+        <image name="pause.circle" catalog="system" width="128" height="121"/>
         <image name="play.circle" catalog="system" width="128" height="121"/>
         <systemColor name="labelColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
