--- a/PodcastFeed/PodcastFeed/Base.lproj/Main.storyboard
+++ b/PodcastFeed/PodcastFeed/Base.lproj/Main.storyboard
@@ -210,7 +210,7 @@
                                 </constraints>
                                 <state key="normal" image="pause.circle" catalog="system"/>
                                 <connections>
-                                    <action selector="playPauseButtonDidTap:" destination="3Bz-6p-Mdn" eventType="touchUpInside" id="J14-Dr-bdW"/>
+                                    <action selector="playPauseButtonDidTap" destination="3Bz-6p-Mdn" eventType="touchUpInside" id="Dll-hc-adH"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8ir-PO-h9U">
@@ -221,14 +221,14 @@
                                 </constraints>
                                 <state key="normal" image="backward" catalog="system"/>
                                 <connections>
-                                    <action selector="backwardButtonDidTap" destination="3Bz-6p-Mdn" eventType="touchUpInside" id="HKR-rj-tKA"/>
+                                    <action selector="previousButtonDidTap" destination="3Bz-6p-Mdn" eventType="touchUpInside" id="HKR-rj-tKA"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="avd-wS-aBg">
                                 <rect key="frame" x="272.5" y="773.5" width="60" height="30"/>
                                 <state key="normal" image="forward" catalog="system"/>
                                 <connections>
-                                    <action selector="forwardButtonDidTap" destination="3Bz-6p-Mdn" eventType="touchUpInside" id="Qgr-cM-Vo6"/>
+                                    <action selector="nextButtonDidTap" destination="3Bz-6p-Mdn" eventType="touchUpInside" id="Qgr-cM-Vo6"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -258,6 +258,7 @@
                     <navigationItem key="navigationItem" title="Player" id="6f0-yf-CMQ"/>
                     <connections>
                         <outlet property="episodeImage" destination="bRs-Q6-NkV" id="EQP-Ja-0E8"/>
+                        <outlet property="playPauseButton" destination="AsJ-PB-0sc" id="AOt-Eq-jUS"/>
                         <outlet property="progressSlider" destination="Uya-GW-pvP" id="t7D-Xn-NXg"/>
                         <outlet property="titleLabel" destination="JJz-Zm-kIT" id="3mU-Vp-FFm"/>
                     </connections>
